--- a/package.json
+++ b/package.json
@@ -4,26 +4,26 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.16.4",
-    "@testing-library/react": "^12.1.2",
-    "@types/jest": "^27.4.1",
-    "@types/node": "^17.0.30",
-    "@types/react": "^18.0.8",
-    "@types/react-dom": "^18.0.3",
-    "@types/styled-components": "^5.1.25",
-    "axios": "^0.21.0",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
-    "react-icons": "^4.3.1",
-    "react-router-dom": "^6.3.0",
-    "react-scripts": "^4.0.0",
-    "react-scroll": "^1.8.7",
-    "react-test-renderer": "^18.1.0",
-    "styled-components": "^5.3.5",
-    "typescript": "~4.0.5"
+    "@testing-library/jest-dom": "5.16.4",
+    "@testing-library/react": "12.1.2",
+    "@types/jest": "27.4.1",
+    "@types/node": "17.0.30",
+    "@types/react": "17.0.0",
+    "@types/react-dom": "17.0.0",
+    "@types/styled-components": "5.1.25",
+    "axios": "0.21.0",
+    "react": "17.0.1",
+    "react-dom": "17.0.1",
+    "react-icons": "4.3.1",
+    "react-router-dom": "6.3.0",
+    "react-scripts": "4.0.3",
+    "react-scroll": "1.8.7",
+    "react-test-renderer": "17.0.1",
+    "styled-components": "5.3.5",
+    "typescript": "4.0.5"
   },
   "scripts": {
-    "start": "react-scripts --openssl-legacy-provider start",
+    "start": "react-scripts start",
     "build": "react-scripts --openssl-legacy-provider build",
     "predeploy": "react-scripts --openssl-legacy-provider build",
     "deploy": "gh-pages -d build",
@@ -47,8 +47,8 @@
     ]
   },
   "devDependencies": {
-    "@types/react-scroll": "^1.8.3",
-    "gh-pages": "^6.0.0",
-    "jest-styled-components": "^7.0.8"
+    "@types/react-scroll": "1.8.3",
+    "gh-pages": "6.0.0",
+    "jest-styled-components": "7.0.8"
   }
 }
