--- a/package.json
+++ b/package.json
@@ -1,5 +1,4 @@
 {
-  "homepage": "https://vitoriapinheiro.github.io/needleweb",
   "name": "client",
   "version": "0.1.0",
   "private": true,
@@ -24,8 +23,8 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts --openssl-legacy-provider build",
-    "predeploy": "react-scripts --openssl-legacy-provider build",
+    "build": "react-scripts build",
+    "predeploy": "react-scripts build",
     "deploy": "gh-pages -d build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
@@ -47,6 +46,7 @@
     ]
   },
   "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "7.21.11",
     "@types/react-scroll": "1.8.3",
     "gh-pages": "6.0.0",
     "jest-styled-components": "7.0.8"
